[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
borsh = { workspace = true }
litesvm = "0.1.0"
resolver-program = { workspace = true }
resolver-sdk = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }
