[package]
name = "resolver_core"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-vault-sdk = { workspace = true }
jito-vault-core = { workspace = true }
jito-restaking-sdk = { workspace = true }
jito-restaking-core= { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
