[package]
name = "resolver-program"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "resolver_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = { workspace = true }
resolver-sdk = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
