[package]
name = "the-dao-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "the_dao_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "^0.24.2"
anchor-spl = "^0.24.2"
bitflags = "1.3"
boolinator = "2.4.0"
itertools = "0.10"
# jet = {git = "https://github.com/jet-lab/jet-v1", version = "0.2.0", features = ["no-entrypoint", "cpi"]}
jet-proto-math = "1.0.1"
jet-proto-proc-macros = "1.0.3"
port-anchor-adaptor = {git = "https://github.com/Aoi1011/port-anchor-adaptor.git", version = "0.3.4"}
port-variable-rate-lending-instructions = "0.3.0"
solana-maths = "0.1.1"
solana-security-txt = "1.0.1"
spl-math = {version = "0.1", features=["no-entrypoint"]}
spl-token-lending = {git = "https://github.com/Aoi1011/solana-program-library", version = "0.1.3", features = ["no-entrypoint"]}
static_assertions = "1.1.0"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
mockall = "0.11"
type-layout = "0.2"
